--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,23 +1,28 @@
-name: .NET
+name: .NET CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ 'master' ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ 'master' ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 9.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
+      - uses: actions/checkout@v4
+
+      - name: Setup .NET SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '6.0.x'  # or specify your SDK version
+
+      - name: Restore solution
+        run: dotnet restore FlexyBoxProject.sln
+
+      - name: Build solution
+        run: dotnet build FlexyBoxProject.sln --no-restore --configuration Release
+
+      - name: Run Web API
+        run: dotnet run --project FlexyBoxProject/FlexyBoxProject/FlexyBoxProject.csproj --no-build --configuration Release
